# my30daysOS_in_rust

./: Cargo.toml  Makefile  hrb.ld  i386-haribote.json
.cargo/: config
asm/: a_nasm.asm  asmhead.asm  hello.asm  hello2.asm  hlt.asm  ipl10.asm  nasmfunc.asm  nasmfunc.nas
src/: asm.rs  console.rs  descriptor_table.rs  dsctbl.rs  fifo.rs  file.rs  fonts.rs  int.rs  interrupt.rs  keyboard.rs  lib.rs  mem.rs  mouse.rs  multi_task.rs  sheet.rs  test.txt  timer.rs  vga.rs
src3/: dsctbl.rs  fifo.rs  int.rs  lib.rs  mem.rs  mouse.rs  sheet.rs  timer.rs  vga.rs
