[package]
name = "my30daysOS_in_rust"
version = "0.1.0"
authors = ["oh-yuya <happy.cccccc.lemon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.0"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
name = "haribote_os"
crate-type = ["staticlib"]